; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_intra_msa.c_ff_tm_16x16_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_intra_msa.c_ff_tm_16x16_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_tm_16x16_msa(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 -1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %9, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @LD_SB(i32* %23)
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call i64 @__msa_fill_h(i32 %25)
  store i64 %26, i64* %17, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 12
  store i32* %28, i32** %7, align 8
  store i32 4, i32* %10, align 4
  br label %29

29:                                               ; preds = %33, %4
  %30 = load i32, i32* %10, align 4
  %31 = add nsw i32 %30, -1
  store i32 %31, i32* %10, align 4
  %32 = icmp ne i32 %30, 0
  br i1 %32, label %33, label %153

33:                                               ; preds = %29
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @LW(i32* %34)
  store i32 %35, i32* %11, align 4
  %36 = load i32, i32* %11, align 4
  %37 = ashr i32 %36, 24
  %38 = call i32 @__msa_fill_b(i32 %37)
  store i32 %38, i32* %13, align 4
  %39 = load i32, i32* %11, align 4
  %40 = ashr i32 %39, 16
  %41 = call i32 @__msa_fill_b(i32 %40)
  store i32 %41, i32* %14, align 4
  %42 = load i32, i32* %11, align 4
  %43 = ashr i32 %42, 8
  %44 = call i32 @__msa_fill_b(i32 %43)
  store i32 %44, i32* %15, align 4
  %45 = load i32, i32* %11, align 4
  %46 = call i32 @__msa_fill_b(i32 %45)
  store i32 %46, i32* %16, align 4
  %47 = load i32*, i32** %7, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 -4
  store i32* %48, i32** %7, align 8
  %49 = load i32, i32* %13, align 4
  %50 = load i32, i32* %12, align 4
  %51 = load i64, i64* %18, align 8
  %52 = load i64, i64* %19, align 8
  %53 = call i32 @ILVRL_B2_UH(i32 %49, i32 %50, i64 %51, i64 %52)
  %54 = load i64, i64* %18, align 8
  %55 = load i64, i64* %19, align 8
  %56 = load i64, i64* %18, align 8
  %57 = load i64, i64* %19, align 8
  %58 = call i32 @HADD_UB2_UH(i64 %54, i64 %55, i64 %56, i64 %57)
  %59 = load i64, i64* %17, align 8
  %60 = load i64, i64* %17, align 8
  %61 = load i64, i64* %18, align 8
  %62 = load i64, i64* %19, align 8
  %63 = call i32 @IPRED_SUBS_UH2_UH(i64 %59, i64 %60, i64 %61, i64 %62)
  %64 = load i64, i64* %18, align 8
  %65 = load i64, i64* %19, align 8
  %66 = call i32 @SAT_UH2_UH(i64 %64, i64 %65, i32 7)
  %67 = load i64, i64* %18, align 8
  %68 = load i64, i64* %19, align 8
  %69 = load i32*, i32** %5, align 8
  %70 = call i32 @PCKEV_ST_SB(i64 %67, i64 %68, i32* %69)
  %71 = load i32, i32* %6, align 4
  %72 = load i32*, i32** %5, align 8
  %73 = sext i32 %71 to i64
  %74 = getelementptr inbounds i32, i32* %72, i64 %73
  store i32* %74, i32** %5, align 8
  %75 = load i32, i32* %14, align 4
  %76 = load i32, i32* %12, align 4
  %77 = load i64, i64* %18, align 8
  %78 = load i64, i64* %19, align 8
  %79 = call i32 @ILVRL_B2_UH(i32 %75, i32 %76, i64 %77, i64 %78)
  %80 = load i64, i64* %18, align 8
  %81 = load i64, i64* %19, align 8
  %82 = load i64, i64* %18, align 8
  %83 = load i64, i64* %19, align 8
  %84 = call i32 @HADD_UB2_UH(i64 %80, i64 %81, i64 %82, i64 %83)
  %85 = load i64, i64* %17, align 8
  %86 = load i64, i64* %17, align 8
  %87 = load i64, i64* %18, align 8
  %88 = load i64, i64* %19, align 8
  %89 = call i32 @IPRED_SUBS_UH2_UH(i64 %85, i64 %86, i64 %87, i64 %88)
  %90 = load i64, i64* %18, align 8
  %91 = load i64, i64* %19, align 8
  %92 = call i32 @SAT_UH2_UH(i64 %90, i64 %91, i32 7)
  %93 = load i64, i64* %18, align 8
  %94 = load i64, i64* %19, align 8
  %95 = load i32*, i32** %5, align 8
  %96 = call i32 @PCKEV_ST_SB(i64 %93, i64 %94, i32* %95)
  %97 = load i32, i32* %6, align 4
  %98 = load i32*, i32** %5, align 8
  %99 = sext i32 %97 to i64
  %100 = getelementptr inbounds i32, i32* %98, i64 %99
  store i32* %100, i32** %5, align 8
  %101 = load i32, i32* %15, align 4
  %102 = load i32, i32* %12, align 4
  %103 = load i64, i64* %18, align 8
  %104 = load i64, i64* %19, align 8
  %105 = call i32 @ILVRL_B2_UH(i32 %101, i32 %102, i64 %103, i64 %104)
  %106 = load i64, i64* %18, align 8
  %107 = load i64, i64* %19, align 8
  %108 = load i64, i64* %18, align 8
  %109 = load i64, i64* %19, align 8
  %110 = call i32 @HADD_UB2_UH(i64 %106, i64 %107, i64 %108, i64 %109)
  %111 = load i64, i64* %17, align 8
  %112 = load i64, i64* %17, align 8
  %113 = load i64, i64* %18, align 8
  %114 = load i64, i64* %19, align 8
  %115 = call i32 @IPRED_SUBS_UH2_UH(i64 %111, i64 %112, i64 %113, i64 %114)
  %116 = load i64, i64* %18, align 8
  %117 = load i64, i64* %19, align 8
  %118 = call i32 @SAT_UH2_UH(i64 %116, i64 %117, i32 7)
  %119 = load i64, i64* %18, align 8
  %120 = load i64, i64* %19, align 8
  %121 = load i32*, i32** %5, align 8
  %122 = call i32 @PCKEV_ST_SB(i64 %119, i64 %120, i32* %121)
  %123 = load i32, i32* %6, align 4
  %124 = load i32*, i32** %5, align 8
  %125 = sext i32 %123 to i64
  %126 = getelementptr inbounds i32, i32* %124, i64 %125
  store i32* %126, i32** %5, align 8
  %127 = load i32, i32* %16, align 4
  %128 = load i32, i32* %12, align 4
  %129 = load i64, i64* %18, align 8
  %130 = load i64, i64* %19, align 8
  %131 = call i32 @ILVRL_B2_UH(i32 %127, i32 %128, i64 %129, i64 %130)
  %132 = load i64, i64* %18, align 8
  %133 = load i64, i64* %19, align 8
  %134 = load i64, i64* %18, align 8
  %135 = load i64, i64* %19, align 8
  %136 = call i32 @HADD_UB2_UH(i64 %132, i64 %133, i64 %134, i64 %135)
  %137 = load i64, i64* %17, align 8
  %138 = load i64, i64* %17, align 8
  %139 = load i64, i64* %18, align 8
  %140 = load i64, i64* %19, align 8
  %141 = call i32 @IPRED_SUBS_UH2_UH(i64 %137, i64 %138, i64 %139, i64 %140)
  %142 = load i64, i64* %18, align 8
  %143 = load i64, i64* %19, align 8
  %144 = call i32 @SAT_UH2_UH(i64 %142, i64 %143, i32 7)
  %145 = load i64, i64* %18, align 8
  %146 = load i64, i64* %19, align 8
  %147 = load i32*, i32** %5, align 8
  %148 = call i32 @PCKEV_ST_SB(i64 %145, i64 %146, i32* %147)
  %149 = load i32, i32* %6, align 4
  %150 = load i32*, i32** %5, align 8
  %151 = sext i32 %149 to i64
  %152 = getelementptr inbounds i32, i32* %150, i64 %151
  store i32* %152, i32** %5, align 8
  br label %29

153:                                              ; preds = %29
  ret void
}

declare dso_local i32 @LD_SB(i32*) #1

declare dso_local i64 @__msa_fill_h(i32) #1

declare dso_local i32 @LW(i32*) #1

declare dso_local i32 @__msa_fill_b(i32) #1

declare dso_local i32 @ILVRL_B2_UH(i32, i32, i64, i64) #1

declare dso_local i32 @HADD_UB2_UH(i64, i64, i64, i64) #1

declare dso_local i32 @IPRED_SUBS_UH2_UH(i64, i64, i64, i64) #1

declare dso_local i32 @SAT_UH2_UH(i64, i64, i32) #1

declare dso_local i32 @PCKEV_ST_SB(i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
